2002-04-08  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* tests/gio-test.c, tests/markup-test.c: Use gsize instead of
	gint. From Miroslaw Dobrzanski-Neumann
	<mne@mosaic-ag.com>. (#77982)
	
2002-04-08  Stanislav Brabec  <utx@penguin.cz> 

        * cs.po: Added Czech (cs) to ALL_LINGUAS.

2002-03-31  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added Malay (ms)to ALL_LINGUAS.

2002-03-29  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add g_convert_init.

Thu Mar 28 18:25:14 2002  Owen Taylor  <otaylor@redhat.com>

	* Released 2.0.1

	* configure.in: Version 2.0.1, interface, binary age 1.

Thu Mar 28 18:22:53 2002  Owen Taylor  <otaylor@redhat.com>

	* README: Remove warning about g_print, etc, encoding.

	* NEWS: Updates.

	* glib/gmessages.c (g_log_default_handler): Use %lu
	(plus a cast) when printing out pid_t arguments.
	(#76770, Morten Welinder)

	* glib/gstrfuncs.c (g_strdup_vprintf): Check the
	result of vasprintf(), return NULL on failure.
	(#76802, Akira Tagoh)

	* tests/testglib.c (TEST): Supress a warning with
	some GCC versions. 

Thu Mar 28 20:31:51 2002  Tim Janik  <timj@gtk.org>

	* glib/gmessages.c:
	(g_print): 
	(g_printerr): convert prtinf() strings to local charset
	when writing them to stdout or stderr.

Wed Mar 27 18:42:22 2002  Tim Janik  <timj@gtk.org>

	* gmessages.[hc]:
	major cleanups. introduced _g_log_fallback_handler() to handle
	recursive messages which really doesn't call any GLib functions.
	this allowes the default handler to use normal GLib functions and
	also fixes user supplied log level handlers.
	fixed locking issues, based on a patch from Sebastian Willhelmi,
	attached to #74356. translate log messages from UTF-8, based
	on the same patch. save fatal and recursion flags across flag
	loop. use new integer format code from above patch.
	move GLib functions out of locked mutex state to avoid deadlocks.
	move the level prefix and filedescriptor logic into mklevel_prefix().