@@ -1,3 +1,8 @@
+2002-04-11  Matthias Clasen  <maclas@gmx.de>
+
+	* tests/patterntest.c: Remove manual UTF-8 -> Latin1 conversion for
+	stuff fed to g_print.
+
 2002-04-08  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
 
 	* tests/gio-test.c, tests/markup-test.c: Use gsize instead of
